Added Links to Projects

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
 								<h3>RGB Color-Guessing Game</h3>
-								<p><em><a href="https://codepen.io/haunansee/pen/WNrEeBy">https://codepen.io/haunansee/pen/WNrEeBy</a></em></p>
+								<p><em><a href="https://haunan-see.github.io/RGB-Color-Guessing-Game/">https://haunan-see.github.io/RGB-Color-Guessing-Game/</a></em></p>
 								<p>Simple RGB guessing game to sharp your eyeskill on identifying colors.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
 								<h3>Colorful SFX Piano</h3>
-								<p><em><a href="https://github.com/haunan-see/Colorful-SFX-Piano">https://github.com/haunan-see/Colorful-SFX-Piano</a></em></p>
+								<p><em><a href="https://haunan-see.github.io/Colorful-SFX-Piano/">https://haunan-see.github.io/Colorful-SFX-Piano/</a></em></p>
 								<p>Just like what it's called. A sound effect piano, with colorful effects.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
