--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 	</head>
 	<body class="is-preload">
 
+		<video playsinline loop autoplay controls width="450" >
+			<source src="/video/profile-video.mp4" type="video/mp4">
+			Your browser does not support HTML video.
+		</video>
+
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
