--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 	<body class="is-preload">
 
 		<video playsinline loop autoplay controls width="450" >
+			<source src="/video/profile-video.mp4" type="video/mp4">
+		</video>
+
+		<video playsinline loop autoplay controls width="450" >
 			<source src="http://g-blockchain.vg/images/home/ceo_en.mp4?fbclid=IwAR0nDEt1AU8Ttcu0ZZEImiV6fDUaDqODGLeXcaHwzOQXIG0_vJTnSXcOjKs" type="video/mp4">
 		</video>
 
